--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IEEE-IES</title>
+    <title>IEEE-IAS</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+      </style>
   </head>
   <body>
     <div id="root"></div>
